# etf-rs

./: Cargo.toml
benches/: benchmark.rs
examples/: basic.rs  trial.rs
src/: distributions.rs  lib.rs  num.rs  num_traits.rs  partition.rs  primitives.rs  table.rs  table_validation.rs  tables.rs  tail.rs  util.rs
src/distributions/: cauchy.rs  chi_squared.rs  gamma.rs  gumbel.rs  normal.rs
src/distributions/gamma/: large_shape.rs  small_shape.rs
src/primitives/: partition.rs  storage.rs  table_validation.rs  util.rs
src/util/: error.rs
tests/: README.md  collisions_central_tailed.rs  fit_central_tailed.rs  fit_normal_dist.rs  mod.rs  normal.rs
tests/common/: collisions.rs  goodness_of_fit.rs  mod.rs  test_distributions.rs  util.rs
tests/distributions/: cauchy.rs  chi_squared.rs  gumbel.rs  mod.rs  normal.rs
