[package]
name = "etf"
version = "0.1.0"
authors = ["Serge Barral <serge@fi3k-barral.com>"]
edition = "2018"

[features]
# Use fused multiply-add (may actually be slower, even if supported by the target arch).
fma = []
# Use the rand_distr::Distribution trait instead of the native one.
rand_distribution = ["rand_distr"]

[dev-dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_xoshiro = "0.6.0"
rand_distr = "0.4.3"
criterion = "0.5"
special = "0.10.3"

[dependencies]
rand_core = "0.6.4"
thiserror = "1.0"
rand_distr = { version = "0.4.3", optional = true }

[[bench]]
name = "benchmark"
harness = false

